<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:behavior_hideable="true"
    android:layout_marginStart="@dimen/_16sdp"
    android:layout_marginEnd="@dimen/_16sdp"
    app:behavior_peekHeight="0dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">


    <TextView
        android:id="@+id/btn_passport"
        style="@style/ButtonDialogButtonText"
        android:background="@drawable/bg_registration_title"
        android:text="@string/register_by_passport" />

    <View style="@style/BottomDialogButtonsSeparator" />

    <TextView
        android:id="@+id/btn_qid"
        style="@style/ButtonDialogButtonText"
        android:background="@drawable/bg_registration_button"
        android:text="@string/register_by_qid"
        />

    <TextView
        android:id="@+id/btnCancelDialog"
        style="@style/ButtonDialogButtonText"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/bg_registration_cancel"
        android:text="@string/cancel" />

</LinearLayout>