<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".view.activities.SplashActivity">

    <include layout="@layout/component_top" />

    <RelativeLayout
        android:id="@+id/rl_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp">

        <ImageView
            android:id="@+id/iv_back"
            style="@style/ImageMirror"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:padding="@dimen/_10sdp"
            android:src="@drawable/ic_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/app_name"
            style="@style/bold"
            android:textColor="@color/white"
            android:textSize="@dimen/large"
             />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/tv_continue"
        android:layout_below="@id/rl_toolbar"
        android:layout_margin="@dimen/_20sdp"
        android:background="@drawable/white_rounded">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_alignParentStart="true"
                    android:id="@+id/iv_component"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:src="@drawable/red_component" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/iv_component"
                    android:text="@string/new_bidder"
                    style="@style/bold"
                    android:textColor="@color/text"
                    android:textSize="@dimen/normal"
                     />

            </RelativeLayout>

            <TextView
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/qatar_id_number"
                style="@style/bold"
                android:textColor="@color/text"
                android:textSize="@dimen/normal"
                 />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/number_til"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                app:boxStrokeColor="@color/box_color"
                app:boxStrokeWidth="@dimen/_1sdp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/number_et"
                    android:inputType="number"
                    android:maxLength="11"
                    style="@style/normal"
                    android:drawableStart="@drawable/qid"
                    android:gravity="center_vertical"
                    android:drawablePadding="@dimen/_5sdp"
                    android:textSize="@dimen/small"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/expiry_date"
                style="@style/bold"
                android:textColor="@color/text"
                android:textSize="@dimen/normal"
                 />

            <TextView
                android:id="@+id/date_et"
                android:background="@drawable/text_stroke"
                android:padding="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_width="match_parent"
                android:drawableStart="@drawable/date"
                style="@style/normal"
                android:drawablePadding="@dimen/_5sdp"
                android:layout_height="wrap_content"
                android:textColor="@color/text"
                android:textSize="@dimen/normal"/>

        </LinearLayout>

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_continue"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="@dimen/_40sdp"
        android:layout_marginEnd="@dimen/_40sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:background="@drawable/button_rounded"
        android:gravity="center"
        style="@style/bold"
        android:text="@string/s_continue"
        android:textColor="@color/white"
        android:textSize="@dimen/normal"
         />

</RelativeLayout>

</layout>