<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.activities.SplashActivity"
    android:background="@drawable/background_one">


    <LinearLayout
        android:paddingTop="@dimen/_50sdp"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/_25sdp"
        android:paddingLeft="@dimen/_60sdp"
        android:paddingRight="@dimen/_60sdp"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/white_logo" />

        <TextView
            android:layout_marginTop="@dimen/_30sdp"
            android:id="@+id/tv_auction"
            android:background="@drawable/white_rounded"
            android:layout_width="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_40sdp"
            android:text="@string/auction"
            style="@style/bold"
            android:gravity="center"
            android:textColor="@color/primary"
            android:textSize="@dimen/normal"/>

        <TextView
            android:id="@+id/tv_visit"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/white_rounded"
            android:layout_width="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_40sdp"
            android:text="@string/visit_the_exhibition"
            style="@style/bold"
            android:gravity="center"
            android:textColor="@color/primary"
            android:textSize="@dimen/normal"/>

        <TextView
            android:id="@+id/tv_proceed"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_width="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:text="@string/proceed_to_app"
            android:gravity="center"
            style="@style/normal"
            android:textColor="@color/white"
            android:textSize="@dimen/normal"/>

        <LinearLayout
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/button_rounded_stroke"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_40sdp">

            <TextView
                android:id="@+id/tv_ar"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_40sdp"
                android:padding="@dimen/_10sdp"
                android:text="AR"
                style="@style/normal"
                android:textColor="@color/white"
                android:gravity="center"
                />

            <TextView
                android:id="@+id/tv_en"
                android:gravity="center"
                style="@style/normal"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_40sdp"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/primary"
                android:background="@drawable/white_rounded_more"
                android:text="EN"/>


        </LinearLayout>

    </LinearLayout>

</RelativeLayout>

</layout>